<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="km_total">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_total">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="total_spend">seu gasto total será de: </string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>

    <string name="validation_fill_all_fields">preencher todos os campos</string>
</resources>