<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/distance"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/km_total"
        android:layout_marginTop="2dp"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/price_per_total"
        android:layout_marginTop="2dp"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/autonomy"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/kms_per_liter"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="42dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/total_spend"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/total_value"
        android:textSize="40sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/purple_700"
        />

    <Button
        android:onClick=""
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/teal_200"
        android:textColor="@color/white"/>

 </LinearLayout>